# tio

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
cmake/: DetectPlatform.cmake
examples/: CMakeLists.txt  echo_server.cpp
include/tio/: error.hpp  event.hpp  interest.hpp  poll.hpp  raw_fd.hpp  source.hpp  tio.hpp  token.hpp  waker.hpp
include/tio/net/: tcp_listener.hpp  tcp_stream.hpp  udp_socket.hpp
include/tio/sys/: selector.hpp
include/tio/sys/detail/: fd_guard.hpp  socket_addr.hpp  unix_addr.hpp
include/tio/sys/unix_/: epoll_selector.hpp  eventfd_waker.hpp
include/tio/unix/: pipe.hpp  unix_datagram.hpp  unix_listener.hpp  unix_stream.hpp
src/tio/: CMakeLists.txt  poll.cpp  waker.cpp
src/tio/net/: tcp_listener.cpp  tcp_stream.cpp  udp_socket.cpp
src/tio/sys/unix_/: epoll_selector.cpp  eventfd_waker.cpp
src/tio/unix/: pipe.cpp  unix_datagram.cpp  unix_listener.cpp  unix_stream.cpp
tests/: CMakeLists.txt  test_epoll_selector.cpp  test_error.cpp  test_event.cpp  test_fd_guard.cpp  test_interest.cpp  test_pipe.cpp  test_poll.cpp  test_raw_fd.cpp  test_tcp.cpp  test_token.cpp  test_udp.cpp  test_unix_datagram.cpp  test_unix_listener.cpp  test_unix_stream.cpp  test_waker.cpp
