find_package(GTest REQUIRED)

function(tio_add_test name)
    add_executable(${name} ${name}.cpp)
    target_link_libraries(${name} PRIVATE tio::tio GTest::gtest_main)
    add_test(NAME ${name} COMMAND ${name})
endfunction()

tio_add_test(test_token)
tio_add_test(test_interest)
tio_add_test(test_error)
tio_add_test(test_fd_guard)
tio_add_test(test_epoll_selector)
tio_add_test(test_event)
tio_add_test(test_poll)
tio_add_test(test_waker)
tio_add_test(test_raw_fd)
tio_add_test(test_tcp)
tio_add_test(test_udp)
tio_add_test(test_unix_listener)
tio_add_test(test_unix_stream)
tio_add_test(test_unix_datagram)
tio_add_test(test_pipe)
